// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowButton should handle props 1`] = `
<div>
  <button
    aria-label="Назад"
    class="arrow-button size-l"
    data-testid="arrow-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        clip-rule="evenodd"
        d="M11.707 3.293a1 1 0 0 1 0 1.414L4.414 12l7.293 7.293a1 1 0 0 1-1.414 1.414l-8-8a1 1 0 0 1 0-1.414l8-8a1 1 0 0 1 1.414 0"
        fill-rule="evenodd"
      />
      <path
        clip-rule="evenodd"
        d="M3 12a1 1 0 0 1 1-1h17a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`ArrowButton should renders correctly 1`] = `
<div>
  <button
    aria-label="Вперед"
    class="arrow-button size-l"
    data-testid="arrow-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        clip-rule="evenodd"
        d="M11.253 3.336a1 1 0 0 1 1.411-.083l9 8a1 1 0 0 1 0 1.494l-9 8a1 1 0 0 1-1.328-1.494L19.495 12l-8.16-7.253a1 1 0 0 1-.082-1.411"
        fill-rule="evenodd"
      />
      <path
        clip-rule="evenodd"
        d="M2 12a1 1 0 0 1 1-1h17a1 1 0 1 1 0 2H3a1 1 0 0 1-1-1"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;
